--- a/TaskManager.WebApp/appsettings.json
+++ b/TaskManager.WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MainConnectionString": "Data Source=YOUR_SERVER_NAME;Initial Catalog=DbTaskManager;Integrated Security=true;TrustServerCertificate=true"
+  }
 }
